--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "typescript": "^4.1.2",
+    "use-async-effect": "^2.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
