--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/lodash": "^4.14.171",
     "@types/react-router-dom": "^5.1.8",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.1",
@@ -20,6 +21,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "await-to-js": "^3.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
